Added `Evolver` helpers, `EventStore` flush config, Avro `LongType` support, and minor improvements
Kotlin Eventsourcing:
- Added `extractEvents()` and `extractEventsAsList()` helper methods to `Evolver`
  for type-safe event extraction from `AggregateEventStream`

Spring Boot EventStore Starter:
- Added `autoFlushAndPublishAfterAppendToStream` configuration property
- Enabled `FlushAndPublishPersistedEventsToEventBusRightAfterAppendToStream`
  interceptor via config for in-transaction event processing

Types Avro:
- Added `LongTypeLogicalType` base class for Avro long-based semantic types
- Refactored `BaseLongTypeConversion` to support new long type pattern
- Added test types: `Quantity`, `QuantityConversion`, `QuantityLogicalTypeFactory`

Reactive Module:
- Capped `LocalEventBus` default `parallelThreads` to max 4 for high-CPU systems

Spring Boot Starters (MongoDB & PostgreSQL):
- Capped `ReactiveProperties` defaults to max 4 threads:
  - `eventBusParallelThreads`
  - `commandBusParallelSendAndDontWaitConsumers`
- Capped `SchedulerProperties.numberOfThreads` to max 4 (PostgreSQL)

Event Store:
- Extended `EventStoreInterceptor` from `Interceptor` marker interface

Foundation:
- Improved `PostgresqlUtil` Javadoc for qualified identifier lengths
- Fixed grammar in `EventTypeOrName` Javadoc

Other:
- Updated `project-suppression.xml` with new security suppressions